fix z-index

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -392,6 +392,7 @@
   display: none;
   /* display: flex; */
   position: absolute;
+  z-index: 2;
   top: 112%;
   left: 0;
   right: 0;
@@ -780,6 +781,7 @@
 }
 .product__container--header-filter-btn-price {
   position: relative;
+  z-index: 1;
   width: 200px;
   display: flex;
   justify-content: space-between;
